# websocklib

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  conanfile.txt  docker-compose.yml
src/: httpserializer.cpp  httpserializer.h  tcpclient.cpp  tcpclient.h  tcpcommon.h  tcpserver.cpp  tcpserver.h  webframeserializer.cpp  webframeserializer.h  websocket.cpp  websocket.hpp  websocketclient.cpp  websocketclient.hpp
tests/: CMakeLists.txt  test_tcpclient.cpp  test_tcpserver.cpp  test_webframeserializer.cpp  test_websocket.cpp  test_websocketclient.cpp
